[metadata]
name = phile
version = 0.0.0.2
url = https://github.com/BoniLindsley/phile
author = Boni Lindsley
author_email = boni.lindsley@gmail.com
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
description = A file-based notification management
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  IMAPClient >= 2.2.0
  PySide2 >= 5.13.2
  appdirs >= 1.4.4
  click >= 8.0.3
  keyring >= 23.2.1
  pathvalidate >= 2.5.0
  portalocker >= 2.3.2
  psutil >= 5.8.0
  pydantic >= 1.8.2
  pynput >= 1.7.4
  watchdog >= 2.1.6
python_requires = >= 3.9
packages = find_namespace:
package_dir =
  = src

[options.entry_points]
console_scripts =
  phile = phile.__main__:main
  phile-notify = phile.notify.__main__:main
  phile-tray-tmux = phile.tray.tmux:main
gui_scripts =
  phile-notify-gui = phile.notify.gui:main
  phile-tray-gui = phile.tray.gui:main

[options.extras_require]
dev =
  Sphinx >= 4.2.0
  black >= 21.9b0
  coverage[toml] >= 6.0.2
  mypy >= 0.910
  pytest >= 6.2.5
  recommonmark >= 0.7.1
  tox >= 3.24.4
  types-appdirs >= 1.4.1
  types-pkg_resources >= 0.1.3
  types-six >= 1.16.2

[options.packages.find]
where = src

[options.package_data]
phile.tray =
  resources/icons/blank/64x64/status/phile-tray-empty.png
  resources/icons/blank/64x64/status/phile-tray-new.png
  resources/icons/blank/64x64/status/phile-tray-read.png
  resources/icons/blank/index.theme

[tox:tox]
skipsdist = True

[testenv]
commands =
  {envpython} -m black --check --diff \
    src/phile tests/test_phile setup.py docs
  {envpython} -m mypy \
    --package phile \
    --package test_phile \
    --package docs
  {envpython} -m mypy setup.py
  {envpython} -m coverage erase
  {envpython} -m coverage run
  {envpython} -m coverage report
extras = dev
usedevelop = True
